<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.FormationDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_id"
        android:textSize="20sp"
        android:id="@+id/tv_id"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="20sp"
        android:id="@+id/tv_title"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_duration"
        android:textSize="20sp"
        android:id="@+id/tv_duration"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_description"
        android:textSize="20sp"
        android:id="@+id/tv_description"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>