<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:elevation="4dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_welcome"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"


                    />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_login"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"


                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">



                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edt_user"

                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>





            <Button
                android:id="@+id/btn_login"
                android:backgroundTint="#FF5722"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginTop="32dp"
                android:onClick="Login"
                android:padding="15dp"
                android:text="@string/btn_login"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>